--- a/PropertyBinding/index.html
+++ b/PropertyBinding/index.html
@@ -14,6 +14,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.15/router.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.15/http.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
