--- a/PropertyBinding/index.html
+++ b/PropertyBinding/index.html
@@ -34,6 +34,6 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-book>Loading...</my-book>
+    <my-app>Loading...</my-app>
   </body>
 </html>
