--- a/ng2/index.html
+++ b/ng2/index.html
@@ -14,10 +14,10 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.15/router.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.15/http.dev.js"></script>
 
-
-    <!-- <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script> -->
+   
     
     <script src="system.config.js"></script>
     <script>
