--- a/ng2/index.html
+++ b/ng2/index.html
@@ -1,11 +1,15 @@
 <html>
   <head>
+  <script>document.write('<base href="' + document.location + '" />');</script>
     <title>Angular 2 QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- 1. Load libraries -->
+   
+
+   <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
+
+
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
@@ -14,15 +18,16 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.15/router.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-beta.15/http.dev.js"></script>
+    <script type="text/javascript" src="node_modules/angular2/bundles/router.dev.js"></script>
 
-   
-    
-    <script src="system.config.js"></script>
-    <script>
-      System.import('app').catch(function(err){ console.error(err);  });
+    <!--  <script src="system.config.js"></script> -->
+     <script>
+      System.config({packages: {app: {format: 'register', defaultExtension: 'js'}}});
+      System.import('app/main')
+            .then(null, console.error.bind(console));
     </script>
+
   </head>
 
   <!-- 3. Display the application -->
